[gd_scene load_steps=33 format=3 uid="uid://j6rlhwklmdjr"]

[ext_resource type="Texture2D" uid="uid://bfydj2eamihd4" path="res://assets/Mushroom/Attack.png" id="1_4ra3w"]
[ext_resource type="Script" uid="uid://vwodh8a3pxc8" path="res://scripts/enemy.gd" id="1_5uy6h"]
[ext_resource type="Texture2D" uid="uid://siao01rd14te" path="res://assets/Mushroom/Idle.png" id="2_5uy6h"]
[ext_resource type="Texture2D" uid="uid://d2wcfsjdfjr3b" path="res://assets/Mushroom/Run.png" id="3_c4w8v"]
[ext_resource type="AudioStream" uid="uid://cfjs3ndkw8lwn" path="res://assets/SFX/monster-growl-trimmed.mp3" id="5_c4w8v"]
[ext_resource type="AudioStream" uid="uid://qrs85f2oneef" path="res://assets/SFX/footstep-on-wood-foley-trimmed.mp3" id="6_xwavj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("1_4ra3w")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("1_4ra3w")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("1_4ra3w")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("1_4ra3w")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("1_4ra3w")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("1_4ra3w")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("1_4ra3w")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("1_4ra3w")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("2_5uy6h")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("2_5uy6h")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("2_5uy6h")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcg2"]
atlas = ExtResource("2_5uy6h")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ile5s"]
atlas = ExtResource("3_c4w8v")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x4g4"]
atlas = ExtResource("3_c4w8v")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pwtc"]
atlas = ExtResource("3_c4w8v")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rogs8"]
atlas = ExtResource("3_c4w8v")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrm80"]
atlas = ExtResource("3_c4w8v")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6awcb"]
atlas = ExtResource("3_c4w8v")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjec0"]
atlas = ExtResource("3_c4w8v")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4rgx"]
atlas = ExtResource("3_c4w8v")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_2mchx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq4b")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ycm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcg2")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ile5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x4g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pwtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rogs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrm80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6awcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjec0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4rgx")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_t3vcr"]
offsets = PackedFloat32Array(0, 0.623377)
colors = PackedColorArray(1, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qaulx"]
gradient = SubResource("Gradient_t3vcr")
fill = 1
fill_from = Vector2(0.518349, 0.490826)

[sub_resource type="CircleShape2D" id="CircleShape2D_5uy6h"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c4w8v"]
radius = 22.6667

[sub_resource type="CircleShape2D" id="CircleShape2D_xwavj"]
radius = 14.6667

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(0.75, 0.75)
collision_layer = 2
script = ExtResource("1_5uy6h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2mchx")
animation = &"idle"
autoplay = "idle"

[node name="LeftEye" type="PointLight2D" parent="."]
scale = Vector2(0.1, 0.1)
color = Color(1, 0.0431373, 0.196078, 1)
energy = 1.75
texture = SubResource("GradientTexture2D_qaulx")

[node name="RightEye" type="PointLight2D" parent="."]
position = Vector2(5, 0)
scale = Vector2(0.1, 0.1)
color = Color(1, 0.0431373, 0.196078, 1)
energy = 1.75
texture = SubResource("GradientTexture2D_qaulx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.6667)
shape = SubResource("CircleShape2D_5uy6h")

[node name="HearingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HearingArea"]
position = Vector2(0, 5.33333)
shape = SubResource("CircleShape2D_c4w8v")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, 6.66667)
shape = SubResource("CircleShape2D_xwavj")

[node name="BreathingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_c4w8v")
autoplay = true
max_distance = 300.0
attenuation = 1.93187
bus = &"SFX"

[node name="FootstepSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_xwavj")
volume_db = -6.0
max_distance = 300.0
attenuation = 2.0
bus = &"SFX"

[node name="AlertSound" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="area_entered" from="HearingArea" to="." method="_on_hearing_area_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
